syntax = "proto3";

package chef.automate.domain.cfgmgmt.response;
option go_package = "github.com/chef/automate/api/interservice/cfgmgmt/response";

message VersionInfo {
  string name = 1;
  string version = 2;
  string sha = 3;
  string built = 4;
}

// Health message
//
// The config-mgmt-service health is constructed with:
// * Status:
//            => ok:             Everything is alright
//            => initialization: The service is in its initialization process
//            => warning:        Something might be wrong?
//            => critical:       Something is wrong!
//
// @afiune: Here we can add more health information to the response
message Health {
  string status = 1;
}

message Organizations {
  repeated string organizations = 1;
}

message SourceFQDNS {
  repeated string source_fqdns = 1;
}

message ExportData {
	bytes content = 1;
}

message ReportExportData {
	bytes content = 1;
}
